2007-11-13 Corrado Primier <bardo@aur.archlinux.org>

	* Adopted
	* Version bump to 0.9.5

2007-11-28 Corrado Primier <bardo@aur.archlinux.org>

	* Version bump to 0.9.7