@@ -1,30 +1,35 @@
 # $Id$
+# Maintainer: Jan "heftig" Steffens <jan.steffens@gmail.com>
+# Contributor: Jan de Groot <jgc@archlinux.org>
+# Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 # Contributor: Corrado Primier <bardo@aur.archlinux.org>
 # Contributor: Thar <mailbox.tec@gmail.com>
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=gstreamer0.10-pulse
-pkgver=0.9.7
+pkgver=0.10.21
 pkgrel=1
 pkgdesc="A GStreamer 0.10 plugin for the PulseAudio sound server"
 arch=('i686' 'x86_64')
-url="http://0pointer.de/lennart/projects/gst-pulse"
 license=('LGPL')
-depends=('gstreamer0.10-base' 'pulseaudio>=0.9.8')
-conflicts=('gstreamer0.10-polyp')
-provides=('gstreamer0.10-polyp')
-replaces=('gstreamer0.10-polyp')
-options=('!libtool')
-source=(http://0pointer.de/lennart/projects/gst-pulse/gst-pulse-${pkgver}.tar.gz)
-md5sums=('166164eb07eacd1d70b965731eb6cbdb')
+makedepends=('pkgconfig')
+url="http://gstreamer.freedesktop.org/"
+depends=('gstreamer0.10-base>=0.10.28' 'pulseaudio>=0.9.8')
+options=(!libtool !emptydirs)
+source=(${url}/src/gst-plugins-good/gst-plugins-good-${pkgver}.tar.bz2)
+sha256sums=('24445a1cf56302ab4ad5f56055d5c3d81c704b8f9f6875fe78a25d4f72716d22')
 
 build() {
-	cd ${srcdir}/gst-pulse-${pkgver}
-	./configure --prefix=/usr --disable-lynx
-	make || return 1
+  cd "${srcdir}/gst-plugins-good-${pkgver}"
+  ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
+    --disable-static --enable-experimental \
+    --with-package-name="GStreamer Good Plugins (Archlinux)" \
+    --with-package-origin="http://www.archlinux.org/" || return 1
+
+  cd ext/pulse
+  make
 }
 
 package() {
-	cd ${srcdir}/gst-pulse-${pkgver}
-	make DESTDIR=${pkgdir} install
+  cd "${srcdir}/gst-plugins-good-${pkgver}/ext/pulse"
+  make DESTDIR="${pkgdir}" install
 }
