@@ -6,3 +6,8 @@
 2007-11-28 Corrado Primier <bardo@aur.archlinux.org>
 
 	* Version bump to 0.9.7
+
+2010-05-04 Jan Steffens <jan.steffens@gmail.com>
+
+	* Adopted
+	* Built from gstreamer0.10-good
